Added code to prevent csrf

--- a/views/newsletter.handlebars
+++ b/views/newsletter.handlebars
@@ -1,6 +1,7 @@
 <div class="formContainer">
     <form class="form-horizontal newsletterForm" role="form" 
             action="/newsletter" method="POST">
+		<input type="hidden" name="_csrf" value="{{_csrfToken}}">
         <div class="form-group">
             <label for="fieldName" class="col-sm-2 control-label">Name</label>
             <div class="col-sm-4">
